外觀大致弄好(在source/temp.php)
Signed-off-by: JamesLei <j14370@gmail.com>

--- a/source/stylesheet/reset.css
+++ b/source/stylesheet/reset.css
@@ -16,7 +16,8 @@ table, caption, tbody, tfoot, thead, tr, th, td {
 	outline: 0;
 	font-size: 100%;
 	vertical-align: baseline;
-	background: transparent;
+/*  background: transparent;*/
+	font-family: Arial, sans-serif;
 }
 body {
 	line-height: 1;
