--- a/source/stylesheet/style.css
+++ b/source/stylesheet/style.css
@@ -1,28 +1,44 @@
-*{
-  font-family: Arial, sans-serif;
+html, body{
+  background: #293232;
 }
 header, nav, article, footer{
   width: 900px;
   margin: 0 auto;
 }
 header{
-  background-color: #DDD;
+  background: #354242 url('../image/Icon.png') no-repeat;
+  background-position: 680px 0;
   height: 100px;
 }
+.title{
+  -webkit-transform: rotate(-10deg); 
+  -moz-transform: rotate(-10deg);
+	text-shadow: 3px 3px 4px #111;
+}
+header h1.title{
+  font-size: 24px;
+  color: #E7FF60;
+  padding: 5px 0 0 0;
+  margin-left:500px;
+}
+header p.title{
+  color: #F7FFC3;
+  margin-left:550px;
+}
 nav{
-  background-color: #aaa;
+  background-color: #7D9100;
   height: 20px;
 }
 article{
-  background-color: #bbb;
+  background-color: #D5D7A5;
   height: 480px;
 }
 footer{
-  background-color: #CCC;
+  background-color: #C9DE55;
   height: 20px;
   text-align: right;
 }
 footer p{
-  font-size: 75%;
+  font-size: 10px;
   padding: 3px;
 }
