--- a/source/stylesheet/style.css
+++ b/source/stylesheet/style.css
@@ -66,3 +66,22 @@ footer p{
   font-size: 10px;
   padding: 3px;
 }
+
+#login{
+  position: relative;
+  top: 100px;
+  width: 300px;
+  margin: auto;
+  padding: 10px;
+}
+#login table      {margin: auto;}
+#login .head      {background: #354242; border-radius: 7px 7px 0 0; color:#E7FF60;}
+#login .left      {border-left: 1px solid #fff;}
+#login .right     {border-right: 1px solid #fff;}
+#login .foot{
+  border-left: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+  border-right: 1px solid #fff;
+  border-radius: 0 0 5px 5px;
+}
+#login td,#login th     {padding: 7px 10px;}
