--- a/source/stylesheet/style.css
+++ b/source/stylesheet/style.css
@@ -57,6 +57,8 @@ article{
   background-color: #D5D7A5;
   height: 480px;
 }
+article a, article a:link, article a:visited, article a:active  {color:#E5FF45;}
+article a:hover                                                 {color:#F7FFC3;}
 footer{
   background-color: #C9DE55;
   height: 20px;
@@ -85,10 +87,18 @@ footer p{
   border-radius: 0 0 5px 5px;
 }
 #login td,#login th     {padding: 7px 10px;}
-#error{
+.login_fail{
   position: fixed;
   top: 200px;
   left: 410px;
+  padding: 7px 200px;
+  background-color: #FEFFAC;
+  color:#F00;
+}
+.logout{
+  position: fixed;
+  top: 200px;
+  left: 392px;
   padding: 7px 200px;
   background-color: #FEFFAC;
   color:#F00;
