--- a/source/stylesheet/style.css
+++ b/source/stylesheet/style.css
@@ -129,7 +129,7 @@ footer p{
 #dashboard th     { color: #293232; background: #C0D060; border-radius: 10px 10px 0 0;}
 #dashboard>div    { width: 45%;padding: 10px;}
 #dashboard .left  { border:0; float: left; clear: both;}
-#dashboard .right { border:0; float: right;}
+#dashboard .right { border:0; float: right; clear: right;}
 #dashboard ul     { float: right; background: #fff; border-radius:0 0 0 10px;}
 #dashboard li     { padding: 5px; list-style: none; float: left;}
 #dashboard li a   { color: #293232;}
