group page done!  &  slight change on css
Signed-off-by: Joshua <joshuascc@gmail.com>

--- a/source/stylesheet/style.css
+++ b/source/stylesheet/style.css
@@ -86,7 +86,7 @@ footer p{
   margin: auto;
   padding: 10px;
 }
-#signup, #newgroup{
+#signup, #newgroup, div.center{
   position: relative;
   top: 100px;
   margin: auto;
